# newsletter

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  sqlx-data.json
.github/workflows/: audit-on-push.yml  audit-scheduled.yml  audit.yml  ci.yml  general.yml
config/: default.toml  default.yaml  default.yml
migrations/: 20210825231258_create_subscriptions_table.sql
scripts/: init_db.sh
src/: app.rs  lib.rs  main.rs  server.rs  settings.rs  telemetry.rs
src/handlers/: mod.rs  subscriptions.rs
src/routes/: health.rs  mod.rs  subscriptions.rs
tests/: health.rs
