[package]
name = "newsletter"
version = "0.1.0"
authors = ["Peter Donovan <peter@darkfusion.io>"]
edition = "2018"
license = "MIT"
description = "Simple, convenient email subscription service"
repository = "https://github.com/peter-donovan/newsletter"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
# Note: actix dependencies are beta versions so pinned for compatibility
actix-http = "=3.0.0-beta.9"
actix-web = "=4.0.0-beta.8"
config = "0.11"
serde = { version = "1", features = ["derive"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["chrono", "macros", "migrate", "postgres", "runtime-actix-rustls", "uuid"]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
