[package]
name = "newsletter"
version = "0.1.0"
authors = ["Peter Donovan <peter@darkfusion.io>"]
edition = "2018"
license = "MIT"
description = "Simple, convenient email subscription service"
repository = "https://github.com/peter-donovan/newsletter"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
chrono = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-actix-web = "0.4.0-beta.13"
tracing-bunyan-formatter = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.config]
version = "0.11"
default-features = false
features = ["toml"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
